objects/Milestone1_Time__c.object
<CustomObject>
    <description>This object is a replica of the Time object(Miilestone1 Unmanaged package)</description>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tags the project id when creating case time that is related to project.</description>
        <label>Case Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Times (Case Project)</relationshipLabel>
        <relationshipName>CaseProjectTime</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Internal Project</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Time Off (PTO)</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>The date the time was incurred. Defaults to today if left blank.</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A description about the time. For example, why the time was incurred.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>The number of hours charged. Note: This cannot be more than 1 day (24 hours).</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user who incurred the time being charged. Defaults to current user if left blank.</inlineHelpText>
        <label>Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_TimesIncurred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_Future_Date__c</fullName>
        <formula>( TODAY() - Date__c ) &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Future Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>TimeEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Support_Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oracle Support Project Task</label>
        <referenceTo>Oracle_Project_Task__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Support_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>carried over from product class.  stamped with flow   Time - Created/After Save - Capture Project Information</description>
        <label>Oracle Support Project</label>
        <referenceTo>Oracle_Project__c</referenceTo>
        <relationshipLabel>Time_s</relationshipLabel>
        <relationshipName>Time_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task2</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Project__c</fullName>
        <description>stamped when time is created from the CASE &gt; PRODUCT CLASS</description>
        <label>Support Project</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Type__c</fullName>
        <label>Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transitioned_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transitioned Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Tim_es</relationshipLabel>
        <relationshipName>Tim_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Days_Old__c</fullName>
        <formula>(TODAY() - Date__c) &gt; 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Days Old</label>
        <type>Checkbox</type>
    </fields>
    <label>Time</label>
    <nameField>
        <label>Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>